src/net/kuruvila/php/parser/PhpParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 /Users/sidharth/Documents/code/phpparser/grammar/Php.g 2009-08-02 17:46:58

package net.kuruvila.php.parser; 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class PhpParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SemiColon", "Comma", "OpenRoundBracket", "CloseRoundBracket", "OpenSquareBracket", "CloseSquareBracket", "OpenCurlyBracket", "CloseCurlyBracket", "ArrayAssign", "LogicalOr", "LogicalAnd", "ClassMember", "InstanceMember", "SuppressWarnings", "QuestionMark", "Dollar", "Colon", "Dot", "Ampersand", "Pipe", "Bang", "Plus", "Minus", "Asterisk", "Percent", "Forwardslash", "Tilde", "Equals", "New", "Clone", "Echo", "If", "Else", "ElseIf", "For", "Foreach", "While", "Do", "Switch", "Case", "Default", "Function", "Break", "Continue", "Return", "Global", "Static", "And", "Or", "Xor", "Instanceof", "List", "Class", "Interface", "Extends", "Implements", "Abstract", "Var", "Const", "Modifiers", "ClassDefinition", "Block", "Params", "Apply", "Member", "Reference", "Empty", "Prefix", "Postfix", "IfExpression", "Label", "Cast", "ForInit", "ForCondition", "ForUpdate", "Field", "Method", "BodyString", "UnquotedString", "AccessModifier", "Integer", "RequireOperator", "AsignmentOperator", "EqualityOperator", "ComparisionOperator", "ShiftOperator", "PrimitiveType", "IncrementOperator", "Array", "SingleQuotedString", "DoubleQuotedString", "HereDoc", "Real", "Boolean", "BodyStringRest", "BodyStringRestShortTag", "MultilineComment", "SinglelineComment", "UnixComment", "Decimal", "Hexadecimal", "Octal", "Digits", "DNum", "Exponent_DNum", "EscapeCharector", "HereDocContents", "Eol", "WhiteSpace", "'as'"
    };
    public static final int Switch=42;
    public static final int DoubleQuotedString=94;
    public static final int New=32;
    public static final int Class=56;
    public static final int Foreach=39;
    public static final int OpenSquareBracket=8;
    public static final int Static=50;
    public static final int Plus=25;
    public static final int Params=66;
    public static final int Hexadecimal=104;
    public static final int Exponent_DNum=108;
    public static final int Equals=31;
    public static final int Default=44;
    public static final int Implements=59;
    public static final int Comma=5;
    public static final int MultilineComment=100;
    public static final int Integer=84;
    public static final int HereDocContents=110;
    public static final int Colon=20;
    public static final int Var=61;
    public static final int EqualityOperator=87;
    public static final int T__113=113;
    public static final int ElseIf=37;
    public static final int Percent=28;
    public static final int Continue=47;
    public static final int QuestionMark=18;
    public static final int ForUpdate=78;
    public static final int Dollar=19;
    public static final int OpenRoundBracket=6;
    public static final int List=55;
    public static final int ClassDefinition=64;
    public static final int UnixComment=102;
    public static final int Prefix=71;
    public static final int Cast=75;
    public static final int Abstract=60;
    public static final int Label=74;
    public static final int ForInit=76;
    public static final int Asterisk=27;
    public static final int UnquotedString=82;
    public static final int Clone=33;
    public static final int Modifiers=63;
    public static final int Const=62;
    public static final int SinglelineComment=101;
    public static final int SingleQuotedString=93;
    public static final int Instanceof=54;
    public static final int Do=41;
    public static final int InstanceMember=16;
    public static final int Field=79;
    public static final int Reference=69;
    public static final int CloseSquareBracket=9;
    public static final int EscapeCharector=109;
    public static final int Ampersand=22;
    public static final int For=38;
    public static final int Octal=105;
    public static final int DNum=107;
    public static final int LogicalAnd=14;
    public static final int SemiColon=4;
    public static final int CloseRoundBracket=7;
    public static final int If=35;
    public static final int LogicalOr=13;
    public static final int Break=46;
    public static final int ArrayAssign=12;
    public static final int Array=92;
    public static final int Apply=67;
    public static final int Postfix=72;
    public static final int RequireOperator=85;
    public static final int IncrementOperator=91;
    public static final int And=51;
    public static final int Decimal=103;
    public static final int Interface=57;
    public static final int CloseCurlyBracket=11;
    public static final int BodyStringRestShortTag=99;
    public static final int PrimitiveType=90;
    public static final int ClassMember=15;
    public static final int ShiftOperator=89;
    public static final int Dot=21;
    public static final int BodyStringRest=98;
    public static final int Minus=26;
    public static final int Boolean=97;
    public static final int WhiteSpace=112;
    public static final int Extends=58;
    public static final int IfExpression=73;
    public static final int Echo=34;
    public static final int Real=96;
    public static final int Eol=111;
    public static final int AccessModifier=83;
    public static final int Or=52;
    public static final int Forwardslash=29;
    public static final int Else=36;
    public static final int BodyString=81;
    public static final int OpenCurlyBracket=10;
    public static final int SuppressWarnings=17;
    public static final int Xor=53;
    public static final int ForCondition=77;
    public static final int ComparisionOperator=88;
    public static final int Case=43;
    public static final int Function=45;
    public static final int Pipe=23;
    public static final int Global=49;
    public static final int Tilde=30;
    public static final int Block=65;
    public static final int Method=80;
    public static final int While=40;
    public static final int Bang=24;
    public static final int EOF=-1;
    public static final int Empty=70;
    public static final int AsignmentOperator=86;
    public static final int Digits=106;
    public static final int HereDoc=95;
    public static final int Member=68;
    public static final int Return=48;

    // delegates
    // delegators


        public PhpParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PhpParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[173+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return PhpParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/sidharth/Documents/code/phpparser/grammar/Php.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:157:1: prog : ( statement )* ;
    public final PhpParser.prog_return prog() throws RecognitionException {
        PhpParser.prog_return retval = new PhpParser.prog_return();
        retval.start = input.LT(1);
        int prog_StartIndex = input.index();
        CommonTree root_0 = null;

        PhpParser.statement_return statement1 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:157:6: ( ( statement )* )
            // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:157:8: ( statement )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:157:8: ( statement )*
            loop1:
            do {
                int alt1=2;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:0:0: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_prog884);
            	    statement1=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, statement1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, prog_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:159:1: statement : ( ( simpleStatement )? BodyString | '{' statement '}' -> statement | bracketedBlock | classDefinition | interfaceDefinition | complexStatement | simpleStatement ';' );
    public final PhpParser.statement_return statement() throws RecognitionException {
        PhpParser.statement_return retval = new PhpParser.statement_return();
        retval.start = input.LT(1);
        int statement_StartIndex = input.index();
        CommonTree root_0 = null;

        Token BodyString3=null;
        Token char_literal4=null;
        Token char_literal6=null;
        Token char_literal12=null;
        PhpParser.simpleStatement_return simpleStatement2 = null;

        PhpParser.statement_return statement5 = null;

        PhpParser.bracketedBlock_return bracketedBlock7 = null;

        PhpParser.classDefinition_return classDefinition8 = null;

        PhpParser.interfaceDefinition_return interfaceDefinition9 = null;

        PhpParser.complexStatement_return complexStatement10 = null;

        PhpParser.simpleStatement_return simpleStatement11 = null;


        CommonTree BodyString3_tree=null;
        CommonTree char_literal4_tree=null;
        CommonTree char_literal6_tree=null;
        CommonTree char_literal12_tree=null;
        RewriteRuleTokenStream stream_CloseCurlyBracket=new RewriteRuleTokenStream(adaptor,"token CloseCurlyBracket");
        RewriteRuleTokenStream stream_OpenCurlyBracket=new RewriteRuleTokenStream(adaptor,"token OpenCurlyBracket");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:160:5: ( ( simpleStatement )? BodyString | '{' statement '}' -> statement | bracketedBlock | classDefinition | interfaceDefinition | complexStatement | simpleStatement ';' )
            int alt3=7;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:160:7: ( simpleStatement )? BodyString
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:160:7: ( simpleStatement )?
                    int alt2=2;
                    alt2 = dfa2.predict(input);
                    switch (alt2) {
                        case 1 :
                            // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:0:0: simpleStatement
                            {
                            pushFollow(FOLLOW_simpleStatement_in_statement897);
                            simpleStatement2=simpleStatement();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, simpleStatement2.getTree());

                            }
                            break;

                    }

                    BodyString3=(Token)match(input,BodyString,FOLLOW_BodyString_in_statement900); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    BodyString3_tree = (CommonTree)adaptor.create(BodyString3);
                    adaptor.addChild(root_0, BodyString3_tree);
                    }

                    }
                    break;
                case 2 :
                    // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:161:7: '{' statement '}'
                    {
                    char_literal4=(Token)match(input,OpenCurlyBracket,FOLLOW_OpenCurlyBracket_in_statement908); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_OpenCurlyBracket.add(char_literal4);

                    pushFollow(FOLLOW_statement_in_statement910);
                    statement5=statement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_statement.add(statement5.getTree());
                    char_literal6=(Token)match(input,CloseCurlyBracket,FOLLOW_CloseCurlyBracket_in_statement912); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_CloseCurlyBracket.add(char_literal6);



                    // AST REWRITE
                    // elements: statement
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 161:25: -> statement
                    {
                        adaptor.addChild(root_0, stream_statement.nextTree());

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 3 :
                    // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:162:7: bracketedBlock
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_bracketedBlock_in_statement924);
                    bracketedBlock7=bracketedBlock();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, bracketedBlock7.getTree());

                    }
                    break;
                case 4 :
                    // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:164:7: classDefinition
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_classDefinition_in_statement937);
                    classDefinition8=classDefinition();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, classDefinition8.getTree());

                    }
                    break;
                case 5 :
                    // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:165:7: interfaceDefinition
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_interfaceDefinition_in_statement945);
                    interfaceDefinition9=interfaceDefinition();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, interfaceDefinition9.getTree());

                    }
                    break;
                case 6 :
                    // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:166:7: complexStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_complexStatement_in_statement953);
                    complexStatement10=complexStatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, complexStatement10.getTree());

                    }
                    break;
                case 7 :
                    // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:167:7: simpleStatement ';'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_simpleStatement_in_statement961);
                    simpleStatement11=simpleStatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, simpleStatement11.getTree());
                    char_literal12=(Token)match(input,SemiColon,FOLLOW_SemiColon_in_statement963); if (state.failed) return retval;

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, statement_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class bracketedBlock_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "bracketedBlock"
    // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:170:1: bracketedBlock : '{' (stmts= statement )* '}' -> ^( Block $stmts) ;
    public final PhpParser.bracketedBlock_return bracketedBlock() throws RecognitionException {
        PhpParser.bracketedBlock_return retval = new PhpParser.bracketedBlock_return();
        retval.start = input.LT(1);
        int bracketedBlock_StartIndex = input.index();
        CommonTree root_0 = null;

        Token char_literal13=null;
        Token char_literal14=null;
        PhpParser.statement_return stmts = null;


        CommonTree char_literal13_tree=null;
        CommonTree char_literal14_tree=null;
        RewriteRuleTokenStream stream_CloseCurlyBracket=new RewriteRuleTokenStream(adaptor,"token CloseCurlyBracket");
        RewriteRuleTokenStream stream_OpenCurlyBracket=new RewriteRuleTokenStream(adaptor,"token OpenCurlyBracket");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:171:5: ( '{' (stmts= statement )* '}' -> ^( Block $stmts) )
            // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:171:7: '{' (stmts= statement )* '}'
            {
            char_literal13=(Token)match(input,OpenCurlyBracket,FOLLOW_OpenCurlyBracket_in_bracketedBlock985); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_OpenCurlyBracket.add(char_literal13);

            // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:171:16: (stmts= statement )*
            loop4:
            do {
                int alt4=2;
                alt4 = dfa4.predict(input);
                switch (alt4) {
            	case 1 :
            	    // /Users/sidharth/Documents/code/phpparser/grammar/Php.g:0:0: stmts= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_bracketedBlock989);
            	    stmts=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_statement.add(stmts.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            char_literal14=(Token)match(input,CloseCurlyBracket,FOLLOW_CloseCurlyBracket_in_bracketedBlock992); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_CloseCurlyBracket.add(char_literal14);


